libhashtable_sources = ['ht.c',
                        'ht_strstr.c',
                        'ht_strint.c',
                        'ht_strfloat.c',
                        'ht_strdouble.c',
                        'ht_fnv1a.c']

libhashtable = library('libhashtable',
                       libhashtable_sources,
                       include_directories : inc,
                       install : true)
